[package]
name = "northship-org"
version = "0.1.0"
authors = ["Ross Schulman <ross@rbs.io>"]

[dependencies]
serde = "1.0.2"
serde_json = "1.0.1"
serde_urlencoded = "0.4.3"
diesel = { version = "*", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.13.0", features = ["sqlite"] }
chrono = "0.4.0"

[dependencies.nom]
version = "^3"
features = ["nightly"]
